Changing Influencer pot

--- a/languages/influencer.pot
+++ b/languages/influencer.pot
@@ -116,8 +116,8 @@ msgstr ""
 
 #: inc/extras.php:136 inc/extras.php:151 inc/extras.php:605
 #: inc/template-functions.php:439 sections/latest-posts.php:54
-msgid "بیشتر بخوانید"
-msgstr ""
+msgid "Continue Reading"
+msgstr "CON READING"
 
 #. used between list items, there is a space after the comma
 #: inc/extras.php:209
